# 07-types

./: Makefile  README.md  cabal.project  hw7-types.cabal  stack.yaml
.github/classroom/: autograding.json
src/Language/Nano/: Parser.hs  TypeCheck.hs  Types.hs
tests/: Common.hs  Test.hs
tests/input/: 3atest5.hs
