name:                hw7-types
version:             0.1.0.0
synopsis:            Starter code for cse130 homework 07-types
license:             MIT
license-file:        LICENSE
author:              Michael Borkowski and Nadia Polikarpova
maintainer:          mborkows@eng.ucsd.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Library
  ghc-options:        -W -threaded
  exposed-modules:    Language.Nano.Types,
                      Language.Nano.Eval,
                      Language.Nano.Parser,
                      Language.Nano.TypeCheck
  Default-Extensions: OverloadedStrings,
                      FlexibleInstances

  -- other-extensions:
  build-depends:       base,
                       array,
                       mtl,
                       parser-combinators,
                       text,
                       megaparsec

  hs-source-dirs:      src
  default-language:    Haskell2010

executable nano
  build-depends:       base,
                       haskeline,
                       mtl,
                       transformers,
                       hw7-types
  default-language:    Haskell2010
  main-is:             bin/Main.hs
  Default-Extensions:  OverloadedStrings,
                       FlexibleInstances

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  other-modules:       Common
  ghc-options:         -threaded
  Default-Extensions:  OverloadedStrings,
                       FlexibleInstances
  main-is:             Test.hs
  build-depends:       base,
                       directory,
                       filepath,
                       tasty,
                       tasty-hunit,
                       hw7-types
